objects/ProjectTask__c/ProjectTask__c.object-meta.xml
<CustomObject>
    <label>ProjectTask</label>
    <nameField>
        <label>ProjectTask Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProjectTask</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>