objects/ProjectTask__c/fields/Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Hours_Remaining__c</fullName>
    <label>Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>