objects/ProjectTask__c/fields/SprintId__c.field-meta.xml
<CustomField>
    <fullName>SprintId__c</fullName>
    <label>SprintId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>