objects/ProjectTask__c/fields/Starting_Hours__c.field-meta.xml
<CustomField>
    <fullName>Starting_Hours__c</fullName>
    <label>Starting Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>