objects/ProjectTask__c/fields/Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Task_Status__c</fullName>
    <label>Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Waiting On Someone else</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>