objects/ProjectTask__c/fields/Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Work_Hours__c</fullName>
    <label>Work Hours</label>
    <summarizedField>TimeSheet__c.Work_Hours__c</summarizedField>
    <summaryForeignKey>TimeSheet__c.ProjectTask__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>